src/test/deca/syntax/parser/invalid/class_extends_wrong_keyword_number.deca
// Parser test, keyword number instead of "extends"

class A {

}

class B 8 A {

}